# BatikNareswara

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.frontend  README.md  docker-compose.yml  next.config.ts  package-lock.json  package.json  tailwind.config.ts
.aicb/: state.json
.devin/: config.local.json
backend/: BatikNareswara.Api.csproj  BatikNareswaraBackend.csproj  Program.cs  appsettings.json
backend/Features/Orders/Commands/: InMemoryPlaceOrderCommandHandler.cs  PlaceOrderCommand.cs  PlaceOrderCommandHandler.cs
backend/Features/Orders/Entities/: Order.cs  OutboxMessage.cs
backend/Features/Orders/Repositories/: IOrderRepository.cs  IOutboxRepository.cs  OrderRepository.cs  (+1 more)
backend/Features/SemanticSearch/: GeminiEmbeddingService.cs  ProductSemanticRepository.cs  SemanticSearchController.cs
backend/migrations/: ensure_tables.sql
batik-nareswara-frontend/: Dockerfile
batik-processor/: Cargo.toml  Dockerfile
batik-processor/src/: main.rs
src/: proxy.ts
src/app/: error.tsx  layout.tsx  page.tsx
src/app/admin/: page.tsx
src/app/auth/: page.tsx
src/app/login/: page.tsx
src/components/: BottomNav.tsx  CartDrawer.tsx  CatalogList.tsx  FilterSidebar.tsx  HeroSection.tsx  ProductCard.tsx  ProductDetailModal.tsx  ProductSkeleton.tsx  SearchBar.tsx  SemanticSearchBar.tsx  SuccessPopup.tsx  VoiceSearch.tsx  WishlistDrawer.tsx
src/components/auth/: AuthBackground.tsx  PasskeyButton.tsx
src/data/: mockProducts.ts
src/types/: dashboard.ts
supabase/: batch2_semantic_search.sql  batch3_data_masking.sql  schema.sql
(+6 files in other folders)
